--- a/index.html
+++ b/index.html
@@ -5,30 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./assets/reset.css">
+  <link rel="stylesheet" href="./assets/style.css">
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <main>
+    <img src="./assets/images/avatar-jessica.jpeg" alt="profile picture">
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+    <h1 class="name">Jessica Randall</h1>
+  <h2 class="address">London, United Kingdom</h2>
+  <p class="role">"Front-end developer and avid reader."</p>
   
-  <div class="attribution">
+  <ul class="link-list">
+    <li><a href="">GitHub</a></li>
+    <li><a href="">Frontend Mentor</a></li>
+    <li><a href="">LinkedIn</a></li>
+    <li><a href="">Twitter</a></li>
+    <li><a href="">Instagram</a></li>
+  </ul>
+  
+  
+  
+  
+  
+  </main>
+  
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
