--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="./assets/reset.css">
-  <link rel="stylesheet" href="./assets/style.css">
-  
-  <title>Frontend Mentor | Social links profile</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png" />
+    <link rel="stylesheet" href="./assets/reset.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
 
-</head>
-<body>
+    <title>Frontend Mentor | Social links profile</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+  <body>
+    <main>
+      <img
+        class="profile-pic"
+        src="./assets/images/avatar-jessica.jpeg"
+        alt="profile picture" />
 
-  <main>
-    <img src="./assets/images/avatar-jessica.jpeg" alt="profile picture">
+      <h1 class="name">Jessica Randall</h1>
+      <h2 class="address">London, United Kingdom</h2>
+      <p class="role">"Front-end developer and avid reader."</p>
 
-    <h1 class="name">Jessica Randall</h1>
-  <h2 class="address">London, United Kingdom</h2>
-  <p class="role">"Front-end developer and avid reader."</p>
-  
-  <ul class="link-list">
-    <li><a href="">GitHub</a></li>
-    <li><a href="">Frontend Mentor</a></li>
-    <li><a href="">LinkedIn</a></li>
-    <li><a href="">Twitter</a></li>
-    <li><a href="">Instagram</a></li>
-  </ul>
-  
-  
-  
-  
-  
-  </main>
-  
-  
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </footer>
-</body>
+      <ul class="link-list">
+        <li><a href="">GitHub</a></li>
+        <li><a href="">Frontend Mentor</a></li>
+        <li><a href="">LinkedIn</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Instagram</a></li>
+      </ul>
+    </main>
+
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </footer>
+  </body>
 </html>
