--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 
     <link
       rel="icon"
+      fjd
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png" />
+      href="./assets/images/favicon-32x32.png"
+    />
     <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/style.css" />
 
     <title>Frontend Mentor | Social links profile</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
@@ -25,7 +28,8 @@
       <img
         class="profile-pic"
         src="./assets/images/avatar-jessica.jpeg"
-        alt="profile picture" />
+        alt="profile picture"
+      />
 
       <h1 class="name">Jessica Randall</h1>
       <h2 class="address">London, United Kingdom</h2>
